# azure-servicebus-n-eventgrid

./: README.md  publisher.py  pyproject.toml  subscriber.py
terraform/: main.tf
